Fix vh on mobile

--- a/src/styles/layouts/_container.scss
+++ b/src/styles/layouts/_container.scss
@@ -5,7 +5,7 @@
   grid-template: a.rem(60) 1fr / 1fr 1fr;
   width: 100%;
   height: 100vh;
-  height: --webkit-fill-available;
+  height: calc(var(--vh, 1vh) * 100);
 
   @include a.breakpoint-min('m') {
     grid-template-columns: a.rem(300) 1fr;
